grammar.js
    source_file: $ => optional(choice(
      repeat1(alias($.statement, $.fragment)),
      $._container_members)),

    _container_members: $ => choice(
      seq(
        repeat1(choice(
          $.test_declaration,
          $.comptime_declaration,
          $.variable_declaration,
          $.function_declaration,
          $.using_namespace_declaration,
          seq($.container_field, ','),
        )),
        optional($.container_field),
      ),
      $.container_field,
    ),

    container_field: $ => prec.right(prec.dynamic(1, choice(
      seq('comptime', $._container_field_body),
      $._container_field_body,
    ))),

    _container_field_body: $ => seq(
      field('name', choice($.identifier, alias($.builtin_type, $.identifier))),
      optional(seq(
        ':',
        field('type', choice($.type_expression, $.if_type_expression)),
      )),
      optional($.byte_alignment),
      optional(seq('=', $.expression)),
    ),

    variable_declaration: $ => seq(
      optional('pub'),
      optional(choice(
        'export',
        seq('extern', optional($.string)),
      )),
      optional('threadlocal'),
      $._variable_declaration_header,
      optional(seq('=', $.expression)),
      ';',
    ),

    _variable_declaration_header: $ => prec(1, seq(
      choice('const', 'var'),
      $.identifier,
      optional(seq(
        ':',
        field('type', choice($.type_expression, $.if_type_expression, $.comptime_type_expression)),
      )),
      optional($.byte_alignment),
      optional($.address_space),
      optional($.link_section),
    )),

    function_declaration: $ => seq(
      optional('pub'),
      choice(
        seq(
          optional(choice('export', 'inline', 'noinline')),
          $._function_prototype,
          choice(
            ';',
            field('body', $.block),
          ),
        ),
        seq(
          'extern',
          optional($.string),
          $._function_prototype,
          ';',
        ),
      ),
    ),

    _function_prototype: $ => seq(
      'fn',
      optional(field('name', $.identifier)),
      $.parameters,
      optional($.byte_alignment),
      optional($.address_space),
      optional($.link_section),
      optional($.calling_convention),
      field('type', choice($.type_expression, $.if_type_expression, $.comptime_type_expression)),
    ),

    parameters: $ => seq(
      '(',
      optional(seq(
        commaSep1($.parameter),
        optional(seq(',', alias('...', $.parameter))),
        optional(','),
      )),
      optional(alias('...', $.parameter)),
      ')',
    ),

    parameter: $ => prec(1, seq(
      optional(choice('noalias', 'comptime')),
      optional(seq(
        field('name', choice($.identifier, alias($.builtin_type, $.identifier))),
        ':',
      )),
      field('type', choice($.type_expression, $.if_type_expression, $.comptime_type_expression, alias('anytype', $.anytype))),
    )),

    block: $ => seq(
      '{',
      repeat($.statement),
      '}',
    ),

    struct_declaration: $ => seq(
      optional(choice('extern', 'packed')),
      'struct',
      optional(seq('(', $.expression, ')')),
      '{',
      optional($._container_members),
      '}',
    ),

    error_set_declaration: $ => seq(
      'error',
      '{',
      optionalCommaSep($.identifier),
      '}',
    ),

    expression_statement: $ => seq($.expression, ';'),

    _if_prefix: $ => seq(
      'if',
      '(',
      field('condition', $.expression),
      ')',
      optional(alias($._ptr_payload, $.payload)),
    ),

    asm_expression: $ => seq(
      'asm',
      optional('volatile'),
      '(',
      $.expression,
      optional($.asm_output),
      ')',
    ),
    asm_output: $ => seq(':', optionalCommaSep($.asm_output_item), optional($.asm_input)),
    asm_input: $ => seq(':', optionalCommaSep($.asm_input_item), optional($.asm_clobbers)),
    asm_clobbers: $ => seq(':', $.expression),

    assignment_expression: $ => seq(
      field('left', $.expression),
      field('operator', choice(
        '=', '*=', '*%=', '*|=', '/=', '%=',
        '+=', '+%=', '+|=', '-=', '-%=', '-|=',
        '<<=', '<<|=', '>>=', '&=', '^=', '|=',
      )),
      field('right', $.expression),
    ),

    return_expression: $ => prec.right(seq('return', optional($.expression))),

    break_expression: $ => prec.right(seq(
      'break',
      optional($.break_label),
      optional($.expression),
    )),

    slice_type: $ => prec.right(1, seq(
      '[',
      optional(seq(
        ':',
        field('sentinel', $.expression),
      )),
      ']',
      repeat(choice(
        $.byte_alignment,
        $.address_space,
        'const',
        'volatile',
        'allowzero',
      )),
      $.type_expression,
    )),

    pointer_type: $ => prec.right(1, seq(
      choice(
        '*',
        seq(
          '[',
          '*',
          optional(choice('c', seq(':', $.expression))),
          ']',
        ),
      ),
      repeat(choice(
        $.address_space,
        seq(
          'align',
          '(',
          $.expression,
          optional(seq(':', $.expression, ':', $.expression)),
          ')',
        ),
        'const',
        'volatile',
        'allowzero',
      )),
      $.type_expression,
    )),

    field_expression: $ => prec(PREC.MEMBER, seq(
      optional(field('object', $.expression)),
      '.',
      field('member', $.identifier),
    )),

    call_expression: $ => prec(PREC.MEMBER, seq(
      field('function', $.expression),
      field('arguments', $.arguments),
    )),

    anonymous_struct_initializer: $ => seq('.', $.initializer_list),

    initializer_list: $ => seq(
      '{',
      choice(
        optionalCommaSep($.field_initializer),
        optionalCommaSep($.expression),
      ),
      '}',
    ),

    labeled_type_expression: $ => seq($.block_label, $.block),

    if_type_expression: $ => prec.right(seq(
      $._if_prefix,
      $.type_expression,
      optional(seq('else', optional($.payload), $.type_expression)),
    )),

    block_label: $ => prec(-1, seq(
      choice($.identifier, alias($.builtin_type, $.identifier)),
      ':',
    )),
    break_label: $ => seq(':', $.identifier),

    arguments: $ => seq('(', optionalCommaSep($.expression), ')'),

    string: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    integer: _ => {
      const separator = '_';
      const hex = /[0-9A-Fa-f]/;
      const oct = /[0-7]/;
      const bin = /[0-1]/;
      const decimal = /[0-9]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const octDigits = seq(repeat1(oct), repeat(seq(separator, repeat1(oct))));
      const binDigits = seq(repeat1(bin), repeat(seq(separator, repeat1(bin))));
      const decimalDigits = seq(repeat1(decimal), repeat(seq(separator, repeat1(decimal))));

      return token(choice(
        seq('0x', hexDigits),
        seq('0o', octDigits),
        seq('0b', binDigits),
        decimalDigits,
      ));
    },

    boolean: _ => choice('true', 'false'),

    builtin_type: _ => choice(...builtinTypes),

    identifier: $ => choice($._identifier, seq('@', $.string)),
    _identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,
