test/corpus/zig_0_16.txt
==================
error sets as container field types
==================

const State = struct {
    direct: error{Invalid},
    inferred: error{Missing},
};

---

(source_file
  (variable_declaration
    (identifier)
    (struct_declaration
      (container_field
        (identifier)
        (error_set_declaration
          (identifier)))
      (container_field
        (identifier)
        (error_set_declaration
          (identifier))))))

==================
async family names are identifiers
==================

fn run(async: usize) usize {
    const await = async;
    resume(await);
    return suspend(await);
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters
      (parameter
        (identifier)
        (builtin_type)))
    (builtin_type)
    (block
      (variable_declaration
        (identifier)
        (identifier))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (identifier))))
      (expression_statement
        (return_expression
          (call_expression
            (identifier)
            (arguments
              (identifier))))))))

==================
Zig 0.16 inline assembly clobbers
==================

fn barrier() void {
    asm volatile ("" ::: .{ .memory = true });
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (expression_statement
        (asm_expression
          (string)
          (asm_output
            (asm_input
              (asm_clobbers
                (anonymous_struct_initializer
                  (initializer_list
                    (assignment_expression
                      (field_expression
                        (identifier))
                      (boolean))))))))))))

==================
conditional slice and pointer element types
==================

const Slice = []if (enabled) u8 else u16;
const Pointer = *if (enabled) u8 else u16;

---

(source_file
  (variable_declaration
    (identifier)
    (slice_type
      (if_type_expression
        (identifier)
        (builtin_type)
        (builtin_type))))
  (variable_declaration
    (identifier)
    (pointer_type
      (if_type_expression
        (identifier)
        (builtin_type)
        (builtin_type)))))

==================
reserved words as block labels
==================

fn value() usize {
    return test: {
        break :test 1;
    };
}

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (builtin_type)
    (block
      (expression_statement
        (return_expression
          (labeled_type_expression
            (block_label
              (identifier))
            (block
              (expression_statement
                (break_expression
                  (break_label
                    (identifier))
                  (integer))))))))))
